# IATHook

./: .gitignore  .gitmodules  CMakeLists.txt  GlobalIATHooker.cpp  GlobalIATHooker.h  IATHook.cpp  IATHook.h  IATUtils.cpp  README.md  asm_detour.asm
src/: GlobalIATHooker.cpp  GlobalIATHooker.h  IATHook.cpp  IATHook.h  IATUtils.cpp  IATUtils.h  asm_detour.asm  iathook_global.h
src/architecture/: CMakeLists.txt
src/architecture/src/MASM/x64/: asm_detour.asm
src/architecture/src/MASM/x86/: asm_detour.asm
